--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title Page</title>
-
-    <link href="style.css" rel="stylesheet">
+    <title>scool manager</title>
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="edit_screen">
+        <div class="edit_screen--in">
+            <div class="edit--header">
+                <div class="eleve_id"></div>
+                <div class="close_edit_scree">X</div>
+            </div>
+            <div class="edit--body">
+
+                <div class="input-flex">
+                    <input type="text" name="nom" id="edite_nom">
+                    <input type="text" name="prenom" id="edite_prenom">
+                </div>
+
+                <div class="input-flex">
+                    <select name="etab" id="edite_etablissement">
+                            <option value="samaritin">samaritin</option>
+                            <option value="istco">istco</option>
+                            <option value="isg">isg</option>
+                    </select>
+                    <select name="class" id="edite_classe">
+                        <option value="tleB">tle B</option>
+                        <option value="tlBa">tle Ba</option>
+                        <option value="2ndBb">2nd Bb</option>
+                    </select>
+                </div>
+
+                <div class="input-flex one">
+                    <label for="edit_notes">les notes de la period en cours</label>
+                    <input type="text" name="edit_notes" id="edit_notes">
+                </div>
+
+            </div>
+            <div class="edit--footer">
+                <button id="enregistre_edition">enregistrer</button>
+                <button>annuler</button>
+            </div>
+        </div>
+    </div>
+
 
     <div class="absolut_ajouts">
 
@@ -22,14 +61,12 @@
             </div>
         </div>
 
-
-
         <!--------ajouter eleve---------->
         <div class="modal">
             <div class="moadal_in">
                 <div class="former">
                     <div class="formulair_titre">
-                        ajouter un eleve
+                        ajouter un eleves
                     </div>
 
                     <div>
@@ -54,9 +91,6 @@
                             <label for="etablissement">etablissement</label>
 
                             <select id="etablissement" name="etablissement">
-                            <option value=""></option>
-                            <option value="istco">istco</option>
-                            <option value="isg">isg</option>
                         </select>
                         </div>
 
@@ -65,7 +99,7 @@
                             <label for="classe">classe</label>
                             <select name="classe" id="classe">
                             <option value=""></option>
-                            <option value="tlBb">tle Bb</option>
+                            <option value="tleB">tle B</option>
                             <option value="tlBa">tle Ba</option>
                             <option value="2ndBb">2nd Bb</option>
                         </select>
@@ -84,63 +118,70 @@
         </div>
     </div>
 
-
     <div class="app-ecran">
         <!--la tête de l'app-->
         <header>
-
-
+            <div class="btnplus">
+                <button class="pea">pae</button>
+            </div>
             <!--logo-->
             <div class="label__conter">
                 <div class="label__text">nombre d'eleves</div>
                 <div class="label">0</div>
             </div>
 
+            <div class="radios">
+                <div id="a1" class="a1 epe">1</div>
+                <div id="a2" class="a2">2</div>
+                <div id="a3" class="a3">3</div>
+            </div>
             <div class="annee"></div>
         </header>
-
         <!--le corps de l'app-->
         <div id="layout-container">
             <div id="sidebar">
-                <div class="sidbar-content"></div>
                 <h2>ETABLISSEMENTS</h2>
-                <div class="rott">
-                    <div class="rot">
-                        <span>IST la colombe</span>
-                        <img class="puc" src="down, bottom, downward, arrow, navigation.svg" alt="">
+                <div class="sidbar-content"></div>
+
+
+                <div class="vertical_nav_btns opened">
+                    <button class="btn_closer_params">X</button>
+                    <div class="vertical-in">
+                        <button class="eleve_add_modal">+ <span>ajouter un eleve</span></buttonn>
+                        <button class="listes">L <span>afficher la liste de cette calsse</span></button>
+                        <button class="classement">C <span>fair le classement de cette classe</span></button>
+                        <a class="btn_rond" href="parametres.html">P <span>parametres</span></a>
                     </div>
-
-                    <div class="wr">
-                        <div class="select a" id="tlBb">tlBb</div>
-                        <div class="select a" id="tlBa">tlBa</div>
-                        <div class="select a" id="2ndBb">2ndBb</div>
-                    </div>
                 </div>
 
-                <div class="nn"><svg width="100%" height="30px" viewBox="0 0 100 100" preserveAspectRatio="none"></svg>
-                </div>
-
-                <div class="vertical_nav_btns">
-                    <button class="eleve_add_modal">+</button>
-                    <button class="listes">L</button>
-                </div>
 
             </div>
-
-
+            <!--87399922-->
             <div class="conter">
                 <div class="ativ">
                     <div class="cree">
                         <div class="trace"></div>
                         <!-------------------tableau des notes---------------------------->
 
-                        <div class="tableau"></div>
+                        <div class="tableau">
+                            <div class="spla">
+                                <img width="100%" height="500px" src="assets/img/icons/tcsvg.svg" />
+                            </div>
+                        </div>
                     </div>
 
                     <!--bare des infos relative-->
                     <div class="asid">
                         <div class="notes nn">
                             <h4 class="n1">aucun élève selectionner</h4>
+
+                            <div class="add_note">
+                                <label for="ajouter_note">attribuer une note a cet eleve</label>
+                                <input placeholder="note" type="number" name="ajouter_note" id="ajouter_note">
+                                <button class="add_note_btn">+</button> <button class="delet_note_btn">-</button>
+                            </div>
+                            <h1 class="points"> <span class="ptn"> 00</span><span class="dmn">Ptn</span></h1>
+                            <hr>
                             <h1 class="moy">00<span class="dmn">dMn</span></h1>
                         </div>
 
@@ -156,7 +197,7 @@
 
                         <div class="notes">
                             <div class="notesf">
-                                <img src="green.png" alt="">
+                                <img src="assets/img/icons/green.png" alt="">
                             </div>
                             <p>la plus forte moyenne</p>
                             <h1 class="plus_forte_n">00</h1><sup>dMn</sup>
@@ -164,19 +205,12 @@
 
                         <div class="notes">
                             <div class="notesf">
-                                <img src="red.png" alt="">
+                                <img src="assets/img/icons/red.png" alt="">
                             </div>
                             <p>la plus faible moyenne</p>
                             <h1 class="plus_faible_n">00</h1><sup>dMn</sup>
                         </div>
 
-                        <div class="notes">
-                            0
-                        </div>
-
-                        <div class="notes">
-                            0
-                        </div>
                     </div>
                 </div>
 
@@ -186,9 +220,38 @@
         </div>
 
     </div>
-    <script src="logic.js"></script>
-    <script src="script.min.js"></script>
 
+    <div class="modal_liste">
+        <div class="bar">
+            <div class="close_liste">x</div>
+            <button class="print">imprimer</button>
+        </div>
+        <h1 class="classe_name"></h1>
+        <div class="table">
+
+            <table>
+                <thead>
+
+                </thead>
+
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="lock-screen dislock">
+        <div class="lock-screen-in">
+            <div class="dislocker_form">
+                <input placeholder="Mot de passe" type="password" name="m" class="password" id="password" />
+                <button id="dislock_btn">deblocker</button>
+            </div>
+        </div>
+
+    </div>
+    <script src="assets/js/logic.js"></script>
+    <script src="assets/js/script.min.js"></script>
     </body>
 
 </html>
