adding elelents to g

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                                 <label for="ajouter_note">attribuer une note a cet eleve</label>
                                 <input placeholder="note" type="number" name="ajouter_note" id="ajouter_note">
                                 <button class="add_note_btn">+</button> <button class="delet_note_btn">-</button>
+                                <div class="notedur">
+                                    
+                                </div>
                             </div>
                             <h1 class="points"> <span class="ptn"> 00</span><span class="dmn">Ptn</span></h1>
                             <hr>
