--- a/parametres.html
+++ b/parametres.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-    <div class="loading__screen">
+    <!--<div class="loading__screen">
         <div class="loader">
             <div class="unanim loading"></div>
             <div class="deuxanim loading"></div>
             <div class="troisanim loading"></div>
-        </div>
+        </div>-->
 
     </div>
     <div class="parametres-inner">
@@ -186,7 +186,6 @@
                 </div>
             </div>
         </div>
-        <script src="assets/js/started.js"></script>
         <script src="assets/js/parametres.js"></script>
 </body>
 
