--- a/parametres.html
+++ b/parametres.html
@@ -24,7 +24,7 @@
             <div class="profile">
                 <div class="bar_retour">
                     <a href="index.html"><i class="icofont-long-arrow-left"></i></a>
-                    
+
                 </div>
                 <h4 class="nom">inconnue</h4>
                 <p class="matiere">pas definit</p>
@@ -99,8 +99,7 @@
                         <div class="formg">
                             <label for="matiere">matiere prise</label>
                             <div class="goupper">
-                                <input class="demis-input" data_key="matiere" value="" type="text" name="matiere"
-                                    id="matiere">
+                                <input class="demis-input" data_key="matiere" value="" type="text" name="matiere" id="matiere">
                                 <button class="button okbtn">ok</button>
                             </div>
 
@@ -151,8 +150,7 @@
 
                         <div class="formg alignedInputs">
                             <button class="ajouter_etabl_btn">ajouter</button>
-                            <input class="demis-input" id="add_etabli_input" data_key="add_etablissement" value=""
-                                type="text">
+                            <input class="demis-input" id="add_etabli_input" data_key="add_etablissement" value="" type="text">
                         </div>
 
                         <h4>liste des etablissments</h4>
@@ -166,8 +164,7 @@
                         <h4 class="indic_classe">liste des classes</h4>
                         <div class="formg alignedInputs clssees">
                             <button class="ajouter_classes_btn">ajouter</button>
-                            <input class="demis-input" id="add_classes_input" data_key="add_classes" value=""
-                                type="text">
+                            <input class="demis-input" id="add_classes_input" data_key="add_classes" value="" type="text">
                         </div>
                         <ul class="aficher_liste_classe">
 
@@ -208,7 +205,7 @@
                 </div>
             </div>
         </div>
-        <script src="assets/js/parametres.js"></script>
+        <script type="module" src="assets/js/logic.js"></script>
 </body>
 
 </html>
